--- a/fronted/package.json
+++ b/fronted/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
+    "react-loader-spinners": "^1.0.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
